--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Vinoy Vijayan
 description: Person on internet
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: images/DSC_2191 (1).jpg
 
 #
 # Flags below are optional
