--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Vinoy Vijayan
 description: Person on internet
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://github.com/vinoy-vijayan/vinoyv/blob/master/images/jekyll-logo.png
+avatar: https://github.com/vinoy-vijayan/vinoyv/blob/master/images/DSC_2185.jpg
 
 #
 # Flags below are optional
